# undergrad

./: mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
dinamica-molecular/: .gitignore  README.md  pyproject.toml  requirements.txt
dinamica-molecular/dinamica_molecular/: __init__.py  k_p__potencial.py  simulacion_3d.py  simulacion_3d_argon.py
inteligencia-artificial/: pyproject.toml
introduccion-a-sismologia/: pyproject.toml
introduccion-a-sismologia/lab3/web/: .gitignore  app.py  file_processor.py
introduccion-a-sismologia/lab3/web/templates/: index.html
mecánica-estadística/: pyproject.toml
técnicas-de-teledetección/: pyproject.toml
