[project]
name = "undergrad"
version = "0.1.0"
description = "Monorepo for undergrad projects"
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = []

[tool.uv.workspace]
members = [
    "dinamica-molecular",
    "inteligencia-artificial",
    "mecánica-estadística",
    "introduccion-a-sismologia",
    "técnicas-de-teledetección",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[dependency-groups]
dev = [
    "ruff>=0.14.6",
]
